删除测试配置

--- a/discovery-eureka-user-provider/src/main/resources/application.properties
+++ b/discovery-eureka-user-provider/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ##注册eureka 默认为true
-eureka.client.register-with-eureka=true
+#eureka.client.register-with-eureka=true
 #用于定义服务续约任务的调用间隔时间 默认30s
-eureka.instance.lease-renewal-interval-in-seconds=30
+#eureka.instance.lease-renewal-interval-in-seconds=30
 #定义服务失败失效的时间 默认为90S
-eureka.instance.lease-expiration-duration-in-seconds=90
+#eureka.instance.lease-expiration-duration-in-seconds=90
 #缓存清单更新时间 默认30S
-eureka.client.registry-fetch-interval-seconds=30
+#eureka.client.registry-fetch-interval-seconds=30
 #eureka自我保护机制 关闭
 #eureka.server.enable-self-preservation: false
