--- a/discovery-eureka/src/main/resources/application.yml
+++ b/discovery-eureka/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
     service-url:
       defaultZone: http://user:password123@10.170.1.182:8761/eureka
   server:
-    enable-self-preservation: false
+    enable-self-preservation: false #关闭自我保护
 security:
   user:
     password: admin
