--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 	<modules>
 		<module>discovery-eureka</module>
 		<module>discovery-eureka-user-provider</module>
-		<!--<module>discovery-eureka-ha</module>
+		<module>discovery-eureka-ha</module>
 		<module>discovery-eureka-user-consumer-7902</module>
 		<module>discovery-eureka-user-consumer-ribbon-7903</module>
-		<module>discovery-eureka-user-consumer-feign</module>-->
+		<module>discovery-eureka-user-consumer-feign</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
