--- a/discovery-eureka-user-consumer-ribbon-7903/src/main/resources/application.yml
+++ b/discovery-eureka-user-consumer-ribbon-7903/src/main/resources/application.yml
@@ -12,6 +12,7 @@ user:
   userServicePath: http://discovery-eureka-user/simple/
 discovery-eureka-user:
   ribbon:
+   NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RetryRule
 
 eureka:
   client:
